# asteroids2

./: .gitignore  Cargo.toml
firedbg/: target.json
src/: asteroids.rs  bullet.rs  collisions.rs  main.rs  player.rs  setup.rs  ttl.rs
